<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_package" translatable="false">com.HMSolutions.thikrallah</string>
    <string name="contact_developer_uri" translatable="false">mailto:28.hani@gmail.com</string>
    <string name="invalid_input">إدخال الوقت غير صحيح</string>
    <string name="help_translate">ساعدنا بترجمة البرنامج</string>
    <string name="offer_translate_help">ارغب في المساعدة بترجمة برنامج اذكر الله</string>
    <string name="my_app_name">أذكر الله</string>
    <string name="share">شارك</string>
    <string name="playstore_not_exist">جوجل بلاي او متصفح انترنت غير محمل على هذا الجهاز</string>
    <string name="browser_not_exist"> متصفح انترنت غير محمل على هذا الجهاز</string>
    <string name="email_client_not_exist">لا يوجد برنامج بريد الكتروني محمل على هذا الجهاز</string>
    <string name="qibla">القبلة</string>
    <string name="compass_dial" translatable="false">Compass Dial</string>
    <string name="compass_hands" translatable="false">Compass Hands</string>
    <string name="sotw_north">N</string>
    <string name="sotw_east">E</string>
    <string name="sotw_south">S</string>
    <string name="sotw_west">W</string>
    <string name="sotw_northeast">NE</string>
    <string name="sotw_northwest">NW</string>
    <string name="sotw_southeast">SE</string>
    <string name="sotw_southwest">SW</string>
    <string name="favorite_reciter">قارئ القرءان المفضل</string>
    <string name="quran_thikr_need_files">اضغط هنا لتحميل بعض الملفات لتفعيل التذكير الصوتي بالقرءان</string>
    <string name="quran_thikr_download_need_files_permission">التذكير الصوتي بالقرءان يحتاج ان يحمل الملفات الصوتية المطلوبة لكي تشتغل هذه الخاصية. هل تريد تحميل الملف الصوتي الان؟</string>
    <string name="quran_thikr_need_files_prompt_title">تحميل ملفات</string>
    <string name="power_Exclusion">استثناءات توفير الطاقة</string>
    <string name="power_Exclusion_message">الرجاء استثناء برنامج اذكر الله من خاصية توفير طاقة البطارية. هذا لكي تعمل التذكيرات والاذان في وقتهم الصحيح بدون تأخير. لا تقلق فالبرنامج لن يستعمل من البطارية الا نسبة بسيطة جدا.</string>
    <string name="autostart">تفعيل التشغل الذاتي</string>
    <string name="autostart_message">الرجاء السماح لبرنامجنا بالعمل بالخلفية حتى لو كان البرنامج مغلقا حتى يشتغل البرنامج بشكل صحيح.</string>
    <string name="athan_timer_notifiaction" translatable="false">Prayer Time Remaining</string>
    <string name="remember_notification" translatable="false">Remembrance of Allah</string>
    <string name="floating_notification" translatable="false">Remember Allah Floating Reminders</string>
    <string name="volume_level">مستوى صوت التذكير</string>
    <string name="translation_link" translatable="false">https://crowdin.com/project/thikrallah</string>
    <string name="mute_when_ringer_mute">كتم التذكير اذا الجهاز في وضع الصامت</string>
    <string name="morningThikr">أذكار الصباح</string>
    <string name="nightThikr">أذكار المساء</string>
    <string name="morningThikrSettings">أعدادات أذكار الصباح</string>
    <string name="nightThikrSettings">أعدادات أذكار المساء</string>
    <string name="Settings">الاعدادات</string>
    <string name="remindMeMorningThikr">تذكير بقراءة أذكار اصباح</string>
    <string name="remindMeNightThikr">تذكير بقراءة اذكار المساء</string>
    <string name="changeReminderTime">تعديل وقت التنبية</string>
    <string name="RemindMeSettings">اعدادات ذكرني بالله</string>
    <string name="general_thikr_reminder_type">طريقة التذكير بالله</string>
    <string name="RemindMeEvery">ذكرني بالله كل</string>
    <string name="RemindmeThroughTheDay">ذكرني بالله على مدى اليوم</string>
    <string name="whatsnew">تم اضافة القرءان الكريم كاملا الى البرنامج. الشكر لمبرمجي برنامج قرءان اندرويد لاتاحتهم لنا برنامجهم لكي ندمجة مع برنامجنا فلا تنسوهم وتنسونا من الدعاء. تستطيع تغيير قرائك المفضل من اعدادات البرنامج لتذكيرات القرءان</string>
    <string name="contactUs">تواصل معنا</string>
    <string name="email_Us">تواصل معنا عبر البريد الالكتروني</string>
    <string name="email_subject">مقترحات على برنامج اذكر الله</string>
    <string name="quiet_time">وقت عدم التذكير الصوتي</string>
    <string name="quiet_time_choice">اوقف التذكير الصوتي في هذه الاوقات</string>
    <string name="quiet_time_after_athan_choice">لا تذكير صوتي بعد الاذان</string>
    <string name="quiet_time_after_athan_choice_summary">اوقف التذكير الصوتي بعد الاذان بنصف ساعه</string>
    <string name="quiet_time_start">وقت عدم التذكير يبدأ في</string>
    <string name="quiet_time_end">وقت عدم التذكير ينتهي في</string>
    <string name="rate_message">اذا لديك اي انطباع سلبي او ايجابي باستخدام برنامجنا يرجى اخذ لحظه من وقتك لتقييم البرنامج حتى نستطيع تحسين البرنامج الى الافضل ان شاء الله. ايظا يرجى دعم المبرمج بالضغط على الدعايات بين الحين والاخر. وشكرا.</string>
    <string name="rate">قيم البرنامج</string>
    <string name="remind_later">ذكرني مره اخرى</string>
    <string name="dont_rate">لا اريد تقييم البرنامج</string>
    <string name="quiet_time_endvalue" translatable="false">06:00</string>
    <string name="athan">الاذان</string>
    <string name="sunrise">شروق الشمس</string>
    <string name="sunset">غروب الشمس</string>
    <string name="prayer1">صلاة الفجر</string>
    <string name="prayer2">صلاة الظهر</string>
    <string name="prayer3">صلاة العصر</string>
    <string name="prayer4">صلاة المغرب</string>
    <string name="prayer5">صلاة العشاء</string>
    <string name="open_settings">افتح الاعدادات</string>
    <string name="my_athkar">اذكاري</string>
    <string name="cancel">الغاء</string>
    <string name="add_thikr">اضف ذكر</string>
    <string name="add_thikr_hint">اكتب نص ذكرك هنا</string>
    <string name="one_thikr_warning">من الضروري ان يكون على الاقل واحد من الاذكار المحمل مع البرنامج مفعلا</string>
    <string name="notification_sound_and_text">تذكير صوتي وتذكير كتابي</string>
    <string name="notification_sound_only">تذكير صوتي فقط</string>
    <string name="notification_text_only">تذكير كتابي فقط</string>
    <string name="play_athkar_at_notification_time">تشغيل الاذكار صوتيا في وقت الاشعار</string>
    <string name="one_minute">1 دقيقة</string>
    <string name="five_minutes">5 دقائق</string>
    <string name="ten_minutes">10 دقائق</string>
    <string name="fifteen_minutes">15 دقيقة</string>
    <string name="thirty_minutes">30 دقيقة</string>
    <string name="one_hour">1 ساعة</string>
    <string name="two_hours">2 ساعات</string>
    <string name="three_hours">3 ساعات</string>
    <string name="four_hours">4 ساعات</string>
    <string name="five_hours">5 ساعات</string>
    <string name="six_hours">6 ساعات</string>
    <string name="seven_hours">7 ساعات</string>
    <string name="eight_hours">8 ساعات</string>
    <string name="nine_hours">9 ساعات</string>
    <string name="ten_hours">10 ساعات</string>
    <string name="eleven_hours">11 ساعات</string>
    <string name="twelve_hours">12 ساعات</string>
    <string name="thikr1">سبحان الله</string>
    <string name="thikr2">الحمدلله</string>
    <string name="thikr3">لا اله الا الله</string>
    <string name="thikr4">الله اكبر</string>
    <string name="thikr5">لا حول ولا قوة الا بالله</string>
    <string name="thikr6">اللهم صل على نبينا محمد</string>
    <string name="thikr7">استغفرالله</string>
    <string name="thikr_kursi">اللّهُ لاَ إِلَهَ إِلاَّ هُوَ الْحَيُّ الْقَيُّومُ لاَ تَأْخُذُهُ سِنَةٌ وَلاَ نَوْمٌ لَّهُ مَا فِي السَّمَوَاتِ وَمَا فِي الأَرْضِ مَن ذَا الَّذِي يَشْفَعُ عِنْدَهُ إِلاَّ بِإِذْنِهِ يَعْلَمُ مَا بَيْنَ أَيْدِيهِمْ وَمَا خَلْفَهُم وَلاَ يُحِيطُونَ بِشَيْءٍ مِّنْ عِلْمِهِ إِلاَّ بِمَا شَاء وَسِعَ كُرْسِيُّهُ السَّمَوَاتِ وَالأَرْضَ وَلاَ يَؤُودُهُ حِفْظُهُمَا وَهُوَ الْعَلِيُّ الْعَظِيم</string>
    <string name="thikr_iklhlas">قُلۡ هُوَ اللّٰہُ اَحَدٌ. اَللّٰہُ الصَّمَدُ. لَمۡ یَلِدۡۙ وَ لَمۡ یُوۡلَدۡ. وَ لَمۡ یَکُنۡ لَّهّ کُفُوًا اَحَدٌ -3 مرات</string>
    <string name="thikr_alfalak">قُلْ أَعُوذُ بِرَبِّ الْفَلَقِ. مِنْ شَرِّ مَا خَلَقَ. وَمِنْ شَرِّ غَاسِقٍ إِذَا وَقَبَ. وَمِنْ شَرِّ النَّفَّاثَاتِ فِي الْعُقَدِ. وَمِنْ شَرِّ حَاسِدٍ إِذَا حَسَدَ -3 مرات</string>
    <string name="thikr_alnas">قُل أَعُوذُ بِرَبِّ ٱلنَّاسِ. مَلِكِ ٱلنَّاسِ. إِلَـٰهِ ٱلنَّاسِ. مِن شَرِّ ٱلوَسوَاسِ ٱلخَنَّاسِ. ٱلَّذِي يُوَسۡوِسُ فِى صُدُورِ ٱلنَّاسِ.مِنَ ٱلجِنَّةِ وَٱلنَّاسِ -3 مرات</string>
    <string name="morning_thikr1">أَصْـبَحْنا وَأَصْـبَحَ المُـلْكُ لله وَالحَمدُ لله ، لا إلهَ إلاّ اللّهُ وَحدَهُ لا شَريكَ لهُ، لهُ المُـلكُ ولهُ الحَمْـد، وهُوَ على كلّ شَيءٍ قدير ، رَبِّ أسْـأَلُـكَ خَـيرَ ما في هـذا اليوم وَخَـيرَ ما بَعْـدَه ، وَأَعـوذُ بِكَ مِنْ شَـرِّ هـذا اليوم وَشَرِّ ما بَعْـدَه، رَبِّ أَعـوذُبِكَ مِنَ الْكَسَـلِ وَسـوءِ الْكِـبَر ، رَبِّ أَعـوذُبِكَ مِنْ عَـذابٍ في النّـارِ وَعَـذابٍ في القَـبْر</string>
    <string name="morning_thikr2">اللّهُـمَّ بِكَ أَصْـبَحْنا وَبِكَ أَمْسَـينا ، وَبِكَ نَحْـيا وَبِكَ نَمُـوتُ وَإِلَـيْكَ النُّـشُور</string>
    <string name="thikr_istighfar">اللّهـمَّ أَنْتَ رَبِّـي لا إلهَ إلاّ أَنْتَ ، خَلَقْتَنـي وَأَنا عَبْـدُك ، وَأَنا عَلـى عَهْـدِكَ وَوَعْـدِكَ ما اسْتَـطَعْـت ، أَعـوذُبِكَ مِنْ شَـرِّ ما صَنَـعْت ، أَبـوءُ لَـكَ بِنِعْـمَتِـكَ عَلَـيَّ وَأَبـوءُ بِذَنْـبي فَاغْفـِرْ لي فَإِنَّـهُ لا يَغْـفِرُ الذُّنـوبَ إِلاّ أَنْتَ</string>
    <string name="morning_thikr3">اللّهُـمَّ إِنِّـي أَصْبَـحْتُ أَُشْـهِدُك ، وَأُشْـهِدُ حَمَلَـةَ عَـرْشِـك ، وَمَلائِكَتِك ، وَجَمـيعَ خَلْـقِك ، أَنَّـكَ أَنْـتَ اللهُ لا إلهَ إلاّ أَنْـتَ وَحْـدَكَ لا شَريكَ لَـك ، وَأَنَّ ُ مُحَمّـداً عَبْـدُكَ وَرَسـولُـك -4 مرات</string>
    <string name="morning_thikr4">اللّهُـمَّ ما أَصْبَـَحَ بي مِـنْ نِعْـمَةٍ أَو بِأَحَـدٍ مِـنْ خَلْـقِك ، فَمِـنْكَ وَحْـدَكَ لا شريكَ لَـك ، فَلَـكَ الْحَمْـدُ وَلَـكَ الشُّكْـر</string>
    <string name="thikr_afani">اللّهُـمَّ عافِـني في بَدَنـي ، اللّهُـمَّ عافِـني في سَمْـعي ، اللّهُـمَّ عافِـني في بَصَـري ، لا إلهَ إلاّ أَنْـتَ. اللّهُـمَّ إِنّـي أَعـوذُبِكَ مِنَ الْكُـفر ، وَالفَـقْر ، وَأَعـوذُبِكَ مِنْ عَذابِ القَـبْر ، لا إلهَ إلاّ أَنْـتَ -3 مرات</string>
    <string name="thikr_hasbi">حَسْبِـيَ اللّهُ لا إلهَ إلاّ هُوَ عَلَـيهِ تَوَكَّـلتُ وَهُوَ رَبُّ العَرْشِ العَظـيم -7 مرات</string>
    <string name="thikr_alafo">اللّهُـمَّ إِنِّـي أسْـأَلُـكَ العَـفْوَ وَالعـافِـيةَ في الدُّنْـيا وَالآخِـرَة ، اللّهُـمَّ إِنِّـي أسْـأَلُـكَ العَـفْوَ وَالعـافِـيةَ في ديني وَدُنْـيايَ وَأهْـلي وَمالـي ، اللّهُـمَّ اسْتُـرْ عـوْراتي وَآمِـنْ رَوْعاتـي ، اللّهُـمَّ احْفَظْـني مِن بَـينِ يَدَيَّ وَمِن خَلْفـي وَعَن يَمـيني وَعَن شِمـالي ، وَمِن فَوْقـي ، وَأَعـوذُ بِعَظَمَـتِكَ أَن أُغْـتالَ مِن تَحْتـي</string>
    <string name="language">اللغه</string>
    <string name="remindMekahf">ذكرني بقراءة سورة الكهف</string>
    <string name="kahf_reminder_type">طريقة التذكير بسورة الكهف</string>
    <string name="calc_method">طريقة الحساب</string>
    <string name="asr_calc_method">طريقة حساب وقت العصر</string>
    <string name="fajr_reminder_type">طريقة تنبية صلاة الفجر</string>
    <string name="duhr_reminder_type">طريقة تنبية صلاة الظهر</string>
    <string name="asr_reminder_type">طريقة تنبية صلاة العصر</string>
    <string name="maghrib_reminder_type">طريقة تنبية صلاة المغرب</string>
    <string name="isha_reminder_type">طريقة تنبية صلاة العشاء</string>
    <string name="record_audio">سجل صوت الدعاء</string>
    <string name="choose_audio_file">اختر ملف صوتي</string>
    <string name="remindMemulk">ذكرني بقراءة سورة الملك</string>
    <string name="mulk_reminder_type">طريقة التذكير بسورة الملك</string>
    <string name="location_adjustment">تعديل موقع المدينة يدويا:</string>
    <string name="current_location">الموقع الحالي: </string>
    <string name="override_location">لا تستعمل الموقع بناء على الGPS. حدد الموقع يدويا</string>
</resources>