<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/language"
        android:layout="@layout/preference_catagory">
        <com.HMSolutions.thikrallah.Utilities.MyListPreference
            android:entries="@array/languagelist"
            android:entryValues="@array/languagelistValues"
            android:key="language"
            android:title="@string/language" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/contactUs"
        android:layout="@layout/preference_catagory">
        <com.HMSolutions.thikrallah.Utilities.MyPreference
            android:key="contactDevKey"
            android:title="@string/email_Us" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/contact_developer_uri" >
                <extra
                    android:name="android.intent.extra.SUBJECT"
                    android:value="@string/email_subject" />
            </intent>
        </com.HMSolutions.thikrallah.Utilities.MyPreference>
        <com.HMSolutions.thikrallah.Utilities.MyPreference
            android:key="help_translate"
            android:title="@string/help_translate" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/contact_developer_uri" >
                <extra
                    android:name="android.intent.extra.SUBJECT"
                    android:value="@string/offer_translate_help" />
            </intent>
        </com.HMSolutions.thikrallah.Utilities.MyPreference>
        <com.HMSolutions.thikrallah.Utilities.MyPreference
            android:key="rateus"
            android:title="@string/rate" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="market://details?id=com.HMSolutions.thikrallah" >
            </intent>
        </com.HMSolutions.thikrallah.Utilities.MyPreference>

    </PreferenceCategory>

</PreferenceScreen>