<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/main_image_dial"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/compass_dial"
        android:src="@drawable/dial" />

    <ImageView
        android:id="@+id/main_image_hands"
        android:layout_width="20dp"
        android:layout_height="240dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/compass_hands"
        android:scaleType="fitXY"
        android:src="@drawable/hands" />


    <TextView
        android:id="@+id/adjustment_text"
        android:paddingTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/location_adjustment"
        android:layout_below="@id/main_image_dial"
        android:gravity="center_horizontal"
        />

    <CheckBox
        android:id="@+id/is_manual_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layoutDirection="locale"
        android:layout_below="@id/adjustment_text"
        android:text="@string/override_location"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_location"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@id/is_manual_location"
        android:layoutDirection="locale"
        />
</RelativeLayout>
